--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0"
   },
