Update backend: database interaction and add functional programming section to webpage

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "start": "node .",
+    "lint": "eslint ."
   },
   "author": "Nikodem Bienia",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.3",
     "jsonwebtoken": "^8.5.1",
@@ -19,6 +21,11 @@
   },
   "devDependencies": {
     "@types/node": "^16.10.3",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.4.3"
   }
 }
