--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,27 @@
 version: '3.9'
-services: 
-  backend: 
+services:
+  backend:
     image: node:latest
-    volumes: 
+    restart: always
+    volumes:
       - ./backend:/application
     env_file:
       ./backend/.env
     working_dir: /application
     command: bash -c "npm run build && node ."
-    ports: 
+    ports:
       - 3000:3000
-  mysql: 
+  database:
     image: mysql
-    volumes: 
+    volumes:
       - ./database:/application
-    ports: 
+    ports:
       - 3306:3306
     env_file:
       ./database/.env
-  frontend: 
+  frontend:
     image: node:latest
-    volumes: 
+    volumes:
       - ./frontend:/application
     working_dir: /application
     env_file:
@@ -28,9 +29,9 @@ services:
     ports:
       - 4000:4000
     command: bash -c "yarn && yarn dev"
-  # nginx: 
+  # nginx:
   #   image: nginx
-  #   volumes: 
+  #   volumes:
   #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
   #   working_dir: /application
   #   ports:
