--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.5",
     "@highlightjs/vue-plugin": "^2.0.1",
+    "@vueuse/core": "^7.6.2",
     "@vueuse/head": "~0.6",
     "axios": "^0.24.0",
     "pinia": "^2.0.9",
@@ -44,6 +45,7 @@
     "postcss": "^8.4.5",
     "postcss-nesting": "~9",
     "prettier": "^2.5.1",
+    "sass": "^1.49.7",
     "tailwindcss": "^3.0.7",
     "typescript": "~4.5",
     "vite": "~2.6",
